# gauge-read

./: .gitignore  README.md  get_meter_area.py  predict.py  predict_online.py  pyproject.toml  requirements.txt  train.py  viz_label.py  viz_modalities.py
configs/: config.json
dataset/: dataload.py  meter_data.py  stn_transform.py
gauge_read/: __init__.py  __main__.py  api.py  gui.py  inference.py  predict.py  train.py  train_stn.py  validation.py
gauge_read/configs/: config.yaml
gauge_read/datasets/: __init__.py  augmentation.py  dataload.py  meter_data.py  stn_datasets.py  stn_transform.py  synth_gauge.py
gauge_read/models/: convnext.py  crnn.py  loss.py  stn.py  textnet.py
gauge_read/scripts/: api.py  cli.py  infer_stn.py  viz_label.py  viz_modalities.py
gauge_read/utils/: app_logic.py  augmentation.py  config.py  converter.py  logger.py  misc.py  read_meter.py  reader.py  roi.py  stn_ops.py  stn_transform.py  tools.py
gauge_read/web/: app.js  app.py  core.py  index.html  schemas.py  server.py  styles.css
gauge_read/web/routes/: batch.py  realtime.py  shared.py  single.py
gauge_read/web/static/css/: app.css
gauge_read/web/static/css/pages/: batch.css  realtime.css  single.css
gauge_read/web/static/css/shared/: base.css  layout.css  responsive.css
gauge_read/web/static/js/: main.js
gauge_read/web/static/js/pages/: batch.js  realtime.js  single.js
gauge_read/web/static/js/shared/: models.js  state.js  tabs.js  ui.js
gauge_read/webui/: __init__.py  app.py  app_logic.py  batch_infer.py  gauge_logic.py  gui.py  index.html  webui.py  webui_logic.py
inference/: infer_stn.py
models/: stn.py
network/: convnext.py  loss.py  resnet.py  textnet.py  vgg.py
scripts/: api.py  cli.py  viz_label.py  viz_modalities.py
stn/: SynGagues.py  datasets.py  infer_stn.py  stn_model.py  train_stn.py  utils.py
tools/: eval_label_gui.py  label_gui.py  visualize_infer.py  visualize_infer_stn.py  visualize_label.py  visualize_modalities.py
train/: train_stn.py
util/: __init__.py  config.py  detection_mask.py  misc.py  option.py  read_meter.py  roi.py  shedule.py  tool.py
utils/: SynGagues.py  datasets.py  units.txt  utils.py
webui/: app.py  gauge_logic.py  gui.py
yolov5/models/: experimental.py
yolov5/utils/: general.py
