[project]
name = "gauge-read"
version = "0.1.0"
description = "Gauge Reading System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "transformers>=4.57.0",
    "accelerate",
    "ultralytics>=8.0.0",
    "tqdm",
    "tensorboard",
    "tensorboardX",
    "scikit-learn",
    "kornia",
    "einops"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 128

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501", "I001", "N806", "N803", "N999"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false