[project]
name = "gauge-read"
version = "0.3.0"
description = "Gauge Reading System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "tqdm",
    "tensorboard",
    "tensorboardX",
    "kornia",
    "scikit-image>=0.26.0",
    "pyyaml>=6.0.2",
    "shapely>=2.1.2",
    "seaborn>=0.13.2",
    "pywebview>=6.1",
    "ultralytics==8.4.21",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
gaugeread = "gauge_read.__main__:main"

[tool.setuptools.packages.find]
include = ["gauge_read*"]

[tool.setuptools.package-data]
gauge_read = ["configs/*.yaml", "datasets/units.txt"]
"gauge_read.web" = [
    "*.html",
    "*.css",
    "*.js",
    "static/favicon.svg",
    "static/css/*.css",
    "static/css/pages/*.css",
    "static/css/shared/*.css",
    "static/js/*.js",
    "static/js/pages/*.js",
    "static/js/shared/*.js",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 128

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501", "I001", "N806", "N803", "N999", "N812", "N802", "E402", "B008"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
